<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0"
    tools:context=".SearchActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.OTTSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/white"
        app:titleTextColor="@color/white" />

    <ListView
        android:id="@+id/userlist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background_color"
        android:divider="@color/background_color"
        android:dividerHeight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSearch">

        <ImageView
            android:id="@+id/imageSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
            app:srcCompat="@drawable/ic_baseline_search_24"
            app:tint="?attr/colorOnSurface" />

        <ImageView
            android:id="@+id/imageSync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/switch1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/switch1"
            app:srcCompat="@drawable/ic_baseline_sync_24"
            app:tint="?attr/colorOnSurface" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.8"
            android:height="60dp"
            android:hint="@string/SearchBoxHintText"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#616161"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_Show"
            app:layout_constraintStart_toEndOf="@+id/imageSearch"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:singleLine="true"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_Show"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.2"
            android:backgroundTint="?attr/colorPrimary"
            android:backgroundTintMode="screen"
            android:onClick="switchToSend"
            android:text="@string/ButtonSubmitText"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UsingOnClickInXml" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:minHeight="48dp"
            android:scaleX="1"
            android:scaleY="1"
            android:text="@string/scrapeSwitchText"
            android:textAlignment="viewStart"
            android:textColorLink="#9FA8DA"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toEndOf="@+id/imageSync"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:subtitleTextColor="@color/white"
            app:titleTextColor="@color/white"
            app:useMaterialThemeColors="false"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
